--- a/01_intro.html
+++ b/01_intro.html
@@ -304,6 +304,7 @@
     <li>
         <h1>Thẻ style (internal CSS)-thường đặt trong thẻ head</h1>
         <p>Định dang cho một tập tin HTML</p>
+        <p> Test github nha moi nguoi</p>
     </li>
 </body>
 </html>
