--- a/01_intro.html
+++ b/01_intro.html
@@ -293,17 +293,47 @@
         </li>
     </ol>
     <!-- <input type="date"> -->
-    <li><h1>CSS</h1>
+    <h1>CSS</h1>
+    <ol type="I">
+    <li>
         <span>selecter+property+value</span>
         <h2>inline css- thuộc tính style của thẻ html </h2>
         <p>định dạng cho thẻ chứa thuộc tính style và các thành phần nằm trong thẻ nếu thuộc tính css có tính kế thừa (phông chữ, màu chữ,...)</p>
         &lt;p style="color: green; "&gt;chu mau &lt;span style="text-transform: uppercase; font-weight: bolder;"&gt;xanh&lt;/span&gt;&lt;/p&gt;
         <p style="color: green; ">chu mau <span style="text-transform: uppercase; font-weight: bolder;">xanh</span></p>
         <p style="color: red; font-weight: bolder;">tôi rất <span style="text-transform: uppercase; font-size: x-large; font-style: oblique ; text-decoration: underline;">lười</span></p>
+        <h3>Thẻ style (internal CSS)-thường đặt trong thẻ head</h3>
+        <p>Định dang cho một tập tin HTML</p>
+        <h3>Tập tin css cùng miền (External CSS) - được liên kết qua thẻ link</h3>
+        <p>Định danh cho thành phần HTML ở nhiều tập tin HTML có liên kết đến tập tin css qua đường dẫn tương đối</p>
+        <h3>Tập tin CSS khác miền (External CSS) - được liên kết qua thẻ link</h3>
+        <p>Định dạnh cho thành phần HTML ở nhiều tập tin khác có liên kết đến tập tin CSS qua url khác miền</p>
     </li>
     <li>
-        <h1>Thẻ style (internal CSS)-thường đặt trong thẻ head</h1>
-        <p>Định dang cho một tập tin HTML</p>
+            <h2>Giá trị màu sắc</h2>
+            <ul>
+                <li>Tên màu: red, yellow,...</li>
+                <li>Mã màu: #123456, #12345600</li>
+                <li>Hệ màu: hàm RGB(r,g,b), RGBA(r,g,b,a)</li>
+                <li>Hệ màu: hàm HSL(h,s,l), HSLA(h,s,l,a)</li>
+            </ul>
+            <ul>
+                <h3>Giá trị kích thước</h3>
+                <li>Tuyệt đối</li>
+                <li >Tương đối</li>
+                <ul>
+                    <li>%: Theo độ rộng thẻ chứa</li>
+                    <li>vh: theo chiều cao trình duyệt</li>
+                    <li>vw:Theo độ rộng trình duyệt</li>
+                    <li>rem: theo kích thước phòng tài liệu</li>
+                    <li>em: theo kích thước phòng tại thẻ định dạnh</li>
+                    <li>px: theo độ phân giải màn hình</li>
+                </ul>
+            </ul>
     </li>
+    <li>
+        
+    </li>
+    </ol>
 </body>
 </html>
