--- a/01_intro.html
+++ b/01_intro.html
@@ -319,7 +319,7 @@
             </ul>
             <ul>
                 <h3>Giá trị kích thước</h3>
-                <li>Tuyệt đối</li>
+                <li>Tuyệt đối (=1/2 inch)</li>
                 <li >Tương đối</li>
                 <ul>
                     <li>%: Theo độ rộng thẻ chứa</li>
@@ -332,7 +332,81 @@
             </ul>
     </li>
     <li>
-        
+         <li>
+            <h2>Các thuộc tính</h2>
+            <h2>Thuộc tính định dạnh</h2>
+            <table>
+                <tr>
+                    <th>STT</th>
+                    <th>Thuộc tính</th>
+                    <th>Mô tả</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>font</td>
+                    <td>
+                        <code>
+                            .b { <br>
+                                font: italic small-caps bold 12px/30px Georgia, serif;<br>
+                            }
+                        </code>
+                        <br>
+                        font-style-->italic <br>
+                        font-variant--> small-caps <br>
+                        font-weight--> bold <br>
+                        font-size--> 12px <br>
+                        font-height-->30px <br>
+                        font-family--> Georgia, serif
+                    </td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td> <strike>Text</strike></td>
+                    <td>
+                        - color: màu chữ <br>
+                        - text-align: Canh lề <br>
+                        - text-align-last: Canh lề dòng cuối cùng <br>
+                        - text-dercoration: <br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+ text-dercoration-line <br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+ text-dercoration-color <br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+ text-dercoration-style <br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+ text-dercoration-thickness <br>
+                        - text-transfrom: chuyển dạng chữ <br>
+                        - text-indent: thụt đầu dòng <br>
+                        - letter-spacing: khoảng cách giữa cách ký tự <br>
+                        - word-spacing: khoảng cách giữa từ <br>
+                        - word-space: tự động ngắt <br>
+                        - text-shadow: bóng chữ <br>
+                    </td>
+            </table>
+            <h2>Thuộc tính định dạnh layout</h2><table>
+                <tr>
+                    <th>STT</th>
+                    <th>Quá trình</th>
+                    <th>Thực hiện</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Quan sát</td>
+                    <td>
+                    <p>Từ trên xuống dưới,từ ngoài ngoài trong</p>
+                    <p>Viết được cấu trúc HTML</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Sắp xếp bố cục</td>
+                    <td>
+                        <p>Canh blockelement:float; dispaly:flex, grid, inline, inline-block,...</p>
+                        <p>Canh vị trí: position,z-index</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Khoảng cách- kích thước</td>
+                    <td>Margin,padding,border,...</td>
+                </tr>
+            </table>
     </li>
     </ol>
 </body>
